; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/atheros/extr_ar91xx_chip.c_ar91xx_chip_device_stopped.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/atheros/extr_ar91xx_chip.c_ar91xx_chip_device_stopped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AR91XX_RESET_REG_RESET_MODULE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ar91xx_chip_device_stopped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar91xx_chip_device_stopped(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @AR91XX_RESET_REG_RESET_MODULE, align 4
  %5 = call i32 @ATH_READ_REG(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %2, align 4
  %8 = and i32 %6, %7
  %9 = load i32, i32* %2, align 4
  %10 = icmp eq i32 %8, %9
  %11 = zext i1 %10 to i32
  ret i32 %11
}

declare dso_local i32 @ATH_READ_REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
